stderr.txt
E:\kotlin\todo\app\src\main\java\com\example\todolist\data\database\AppDatabase.java:51: error: cannot find symbol
                    .addMigration(MIGRATION_1_2)
                    ^
  symbol:   method addMigration(Migration)
  location: class Builder<AppDatabase>
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 2s
